@@ -4,6 +4,10 @@ Revision history for Date-Easy
 
 0.01_02   2016-05-22 01:48:55PDT-0700 America/Los_Angeles (TRIAL RELEASE)
 
+    [Bug Fixes]
+    * The "%s" format specifier now always returns the same value as the
+      epoch method, regardless of what the underlying implementation thinks
+
     [Interface Changes]
     * ::Date and ::Datetime now have accessors that follow the UI of
       DateTime rather than Time::Piece
@@ -12,6 +16,8 @@ Revision history for Date-Easy
     [Distro Fixes]
     * Fixed multiple cases of datetimes not matching due to clock rolling over
       github #4 (thx Slaven Rezić (SREZIC))
+    * Fixed `strftime` unit tests being locked to the author's timezone
+      github #6 (thx Slaven Rezić (SREZIC))
     * Fixed out-of-range tests on 32-bit machines
       github #3 (thx Slaven Rezić (SREZIC))
     * Fixed bug where List::Util might be too low a version during testing
